# online-marketing-ki

./: .gitignore  AGENTS.md  README.md  _quarto.yml  book-theme.scss  index.html  index.qmd  introduction.html  introduction.qmd  search.json
slides/: AGENTS.md  CLAUDE.md  _metadata.yml  _quarto.yml  agenda-template.md  custom-new.scss  elements-redesign-a.qmd  elements.qmd  pyproject.toml  references.bib  slide-template-edu.qmd  slide-template-fragments.qmd  slide-template-minimal.qmd  title-slide.html  video-template.qmd
slides/01-marketing-grundlagen/: ki-im-marketing.html  ki-im-marketing.qmd  marketing-mix.html  marketing-mix.qmd  was-ist-marketing.html  was-ist-marketing.qmd
slides/02-kundenverstaendnis/: business-model-canvas.html  business-model-canvas.qmd  empathy-map.html  empathy-map.qmd  value-proposition-canvas.html  value-proposition-canvas.qmd
slides/03-zielgruppe-positionierung/: personas.html  personas.qmd  positionierung.html  positionierung.qmd  segmentierung-targeting.html  segmentierung-targeting.qmd
slides/04-marketingziele-strategie/: smart-ziele.html  smart-ziele.qmd  ziele-zu-kennzahlen.html  ziele-zu-kennzahlen.qmd
slides/05-content-persuasion/: content-strategie.html  content-strategie.qmd  ki-content-erstellung.html  ki-content-erstellung.qmd  science-of-persuasion.html  science-of-persuasion.qmd  storytelling.html  storytelling.qmd
slides/06-seo/: core-web-vitals.html  core-web-vitals.qmd  keyword-recherche.html  keyword-recherche.qmd  onpage-technische-seo.html  onpage-technische-seo.qmd
slides/07-google-ads/: quality-score.html  (+5 more)
(+138 files in other folders)
