[project]
name = "lernplattform-templates"
version = "0.1.0"
description = "Template repo for AI-generated Quarto revealjs slide decks"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=0.3",
    "pillow>=10.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts"]
